--- a/style.css
+++ b/style.css
@@ -245,25 +245,25 @@ select{
     border-radius: 16px;
 }
 .NorthAmerica{
-    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('/Images/Rectangle7.png') no-repeat;
+    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('./Images/Rectangle7.png') no-repeat;
     width: 474px;
     height: 286px;
     border-radius: 16px;
 }
 .Kashmir{
-    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('/Images/Rectangle9.png') no-repeat;
+    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('./Images/Rectangle9.png') no-repeat;
     width: 274px;
     height: 286px;
     border-radius: 16px;
 }
 .Bangladesh{
-    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('/Images/Rectangle11.png') no-repeat;
+    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('./Images/Rectangle11.png') no-repeat;
     width: 473px;
     height: 300px;
     border-radius: 16px;
 }
 .Bandarban{
-    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('/Images/Rectangle10.png') no-repeat;
+    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('./Images/Rectangle10.png') no-repeat;
     width: 673px;
     height: 300px;
     border-radius: 16px;
